# idealize-ai

./: .dockerignore  .env.example  .gitignore  README.md  package-lock.json  package.json
apps/backend/: README.md  pyproject.toml
apps/backend/src/idealize_ai/: main.py
apps/backend/src/idealize_ai/adapters/inbound/http/: app.py
apps/backend/src/idealize_ai/adapters/outbound/generation/: __init__.py  stub_document_generator.py  traceable_document_generator.py
apps/backend/src/idealize_ai/adapters/outbound/langgraph/: __init__.py  langgraph_orchestrator.py
apps/backend/src/idealize_ai/adapters/outbound/llm/: __init__.py  configurable_llm.py
apps/backend/src/idealize_ai/adapters/outbound/persistence/: __init__.py  in_memory_project_repository.py  sqlite_project_repository.py
apps/backend/src/idealize_ai/adapters/outbound/rag/: __init__.py  in_memory_rag.py
apps/backend/src/idealize_ai/application/: __init__.py  mappers.py  prompts.py
apps/backend/src/idealize_ai/application/use_cases/: __init__.py
apps/backend/src/idealize_ai/domain/: __init__.py  exceptions.py  stage_flow.py
apps/backend/src/idealize_ai/domain/entities/: __init__.py
apps/backend/src/idealize_ai/infrastructure/config/: settings.py
apps/backend/src/idealize_ai/ports/: __init__.py  document_generation.py  llm.py  orchestration.py  rag.py  repositories.py
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: test_health.py  test_projects_api.py
apps/backend/tests/unit/: test_adapters.py  test_contracts_package.py  test_stage_flow.py  test_use_cases.py
(+67 files in other folders)
